Add: item request to item mapper and item, crud to item request

--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -24,3 +24,5 @@ errors.400.bookings.unavailable=Booking is unavailable
 errors.400.bookings.not_allowed=You do not have permission
 # COMMENTS
 errors.400.comments.not_allowed=You do not have access
+# REQUEST
+errors.404.requests=Request not found
